--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,17 @@ services:
       - .env-non-dev
 
   redis:
-    image: redis:7
+    image: redis:latest
     container_name: redis_app
-    command: --port 5370
+    command: redis-server
+    ports:
+      - "5370:6379"
     expose:
-      - 5370
+      - 6379
+    environment:
+      - REDIS_PORT=5370
+      - REDIS_DATABASES=16
+
 
   app:
     build:
@@ -25,7 +31,7 @@ services:
     container_name: fastapi_app
     command: ["/fastapi_app/docker/app.sh"]
     ports:
-      - 9999:8080
+      - "9999:8080"
     depends_on:
       - db
       - redis
