mongodb integrated with docker. test data insertion by app startup.

--- a/.env-non-dev
+++ b/.env-non-dev
@@ -8,6 +8,11 @@ POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
+MONGODB_HOST=mongodb
+MONGODB_PORT=27017
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=admin
+MONGO_INITDB_DATABASE=appDB
 
 DB_PORT_MONGO=27017
 
