--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,13 @@ services:
       - REDIS_DATABASES=16
 
 
+  mongodb:
+    image: mongo:latest
+    container_name: mongo
+    ports:
+      - "27017:27017"
+
+
   app:
     build:
       context: .
@@ -33,4 +40,6 @@ services:
       - "9999:8080"
     depends_on:
       - db
+      - mongodb
       - redis
+
