--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ asyncpg==0.28.0
 psycopg==3.1.10
 psycopg-binary==3.1.10
 sqlalchemy==2.0.20
-fastapi==0.103.1
+fastapi==0.109.2
 pydantic==2.3.0
 pydantic-settings==2.0.3
 uvicorn==0.23.2
@@ -11,8 +11,7 @@ python-dotenv==1.0.0
 pymongo==4.6.1
 motor==3.3.2
 beanie==1.23.6
-fastapi-users[sqlalchemy]
 gunicorn
 redis==5.0.1
 pymongo
-jose
+python-jose
