--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,55 @@
 alembic==1.12.0
+annotated-types==0.6.0
+anyio==3.7.1
+async-timeout==4.0.3
 asyncpg==0.28.0
+bcrypt==4.1.2
+beanie==1.23.6
+cached-property==1.5.2
+cffi==1.16.0
+chardet==5.2.0
+click==8.1.7
+cryptography==41.0.7
+dnspython==2.4.2
+ecdsa==0.18.0
+email-validator==2.0.0.post2
+exceptiongroup==1.2.0
+fastapi==0.109.2
+fastapi-users==12.1.2
+fastapi-users-db-sqlalchemy==6.0.1
+greenlet==3.0.3
+gunicorn==21.2.0
+h11==0.14.0
+idna==3.6
+inflection==0.5.1
+jose==1.0.0
+lazy-model==0.2.0
+makefun==1.15.2
+Mako==1.3.0
+MarkupSafe==2.1.3
+motor==3.3.2
+mypy-extensions==1.0.0
+packaging==23.2
+passlib==1.7.4
 psycopg==3.1.10
 psycopg-binary==3.1.10
-sqlalchemy==2.0.20
-fastapi==0.109.2
+pyasn1==0.5.1
+pycparser==2.21
 pydantic==2.3.0
 pydantic-settings==2.0.3
-uvicorn==0.23.2
-python-dotenv==1.0.0
+pydantic_core==2.6.3
+PyJWT==2.8.0
 pymongo==4.6.1
-motor==3.3.2
-beanie==1.23.6
-gunicorn
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
 redis==5.0.1
-pymongo
-python-jose
-jose==1.0.0
-passlib==1.7.4
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.20
+starlette==0.36.3
+toml==0.10.2
+typing-inspect==0.9.0
+typing_extensions==4.9.0
+uvicorn==0.23.2
