--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ pydantic_core==2.6.3
 PyJWT==2.8.0
 pymongo==4.6.1
 python-dotenv==1.0.0
-python-jose==3.3.0
+python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 redis==5.0.1
 rsa==4.9
