--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,13 +22,6 @@ services:
       - REDIS_DATABASES=16
 
 
-  mongodb:
-    image: mongo:latest
-    container_name: mongo
-    ports:
-      - "27017:27017"
-
-
   app:
     build:
       context: .
@@ -38,8 +31,9 @@ services:
     command: ["/fastapi_app/docker/app.sh"]
     ports:
       - "80:8080"
+    volumes:
+      - /home/alex/PycharmProjects/DevInterviewProject/api/python_questions/questions.txt
     depends_on:
       - db
-      - mongodb
       - redis
 
